# vkc

./: CMakeLists.txt  LICENSE  README.md  build_shaders.sh
include/vk/: vk.hpp  vkarraybuffer.hpp  vkutils.hpp
include/vk/api/: vkbuffer.h  vkcommandbuffer.h  vkcommandpool.h  vkdescriptorpool.h  vkdescriptorset.h  vkdevice.h  vkshader.h  vkutils.h
include/vk/internal/: vk.hpp
src/api/: vkbuffer.cc  vkcommandbuffer.cc  vkcommandpool.cc  vkdescriptorpool.cc  vkdescriptorset.cc  vkdevice.cc  vkshader.cc  vkutils.cc
tests/unittests/: arraybuffer.test.cc  device.test.cc  program.test.cc
tests/unittests/fixtures/shaders/: bounds.comp.glsl  grids.comp.glsl  specs.comp.glsl  threadscount.comp.glsl
